# VINS_course_rootba

./: .gitignore  LICENSE
rootBA/: CMakeLists.txt
rootBA/include/: camera_observe.hpp  landmark_block.hpp  problem_vo.hpp
rootBA/src/: benchmark_rootba.cpp  test_rootba.cpp
rootBA/src/debug/: Jl.txt  checkJacobian.txt
rootBA/src/learn_tbb/: CMakeLists.txt  example1.cpp  example2.cpp
rootBA/src/test&&/: CMakeLists.txt  test1.cpp  testgivens.cpp
